# omnibioai-iam-client

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows_disabled/: ci.yml
iam_client/: __init__.py  client.py  exceptions.py  models.py  permissions.py
tests/: conftest.py  test_client.py  test_models.py  test_permissions.py
