[project]
name = "omnibioai-iam-client"
version = "0.1.0"
description = "IAM client SDK for OmniBioAI ecosystem"
authors = [{ name = "Manish Kumar" }]
requires-python = ">=3.9"

dependencies = [
    "requests",
    "pydantic"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"